syntax = "proto3";

package bootiful;

option java_package = "com.nduyhai.grpc";

service CustomerService {
  rpc Register(CreateUserRequest) returns (CreateUserResponse) {}
}

message CreateUserRequest {
  string user_name = 1;
  string password = 2;

}
message CreateUserResponse {
  string user_id = 1;
}